# Particle-Simulation

./: .gitignore  CMakeLists.txt  README.md
V1 (AoS)/: defines.h  main.cpp  particle.cpp  solver.cpp  solver.h
V2 (SoA) + Some Features/: defines.h  main.cpp  particle.cpp  solver.cpp  solver.h
V3 Broken Verlet + Little Optimizations /: defines.h  main.cpp  particle.cpp  renderer.cpp  renderer.h  solver.cpp  solver.h
V4 Perfect Verlet + Little Improvements/: defines.h  main.cpp  particle.cpp  renderer.cpp  renderer.h  solver.cpp  solver.h
V5 Improved Collision + Added Colors/: defines.h  main.cpp  renderer.h  solver.cpp  solver.h
V5 Improved Collision + Added Colors /: defines.h  particle.cpp  renderer.cpp
V6 Added Different Radii/: solver.cpp
V7 Added Mouse Constrols/: defines.h
src/: main.cpp  particle.cpp  readme.txt  renderer.cpp  solver.cpp
